--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-20  Aaron Bockover  <abock@gnome.org>
+
+	* configure.ac: Bumped version to 2.0.3.1
+
+	* NEWS: Updated for 2.0.3.1 release
+
 2009-01-15  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* tests/fixtures/TagLib.Tests.TaggingFormats/XiphTest.cs: Update unit test
