--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Version 2.0.3.1
+January 20, 2009
+
+TagLib# bugs are now tracked at http://bugzilla.gnome.org.
+
+Contributors to this release:
+  Andy Beal, Gabriel Burt, Jeffrey Stedfast, John Millikin
+
+Fixes in this release include:
+  * Add support for artwork in ogg files
+  * Recognize .oga, ogv, .m4b, and some other mimetypes
+  * Add support for Mpeg4 dash atoms
+  * Fix bug with parsing ID3v2 w/ the tag-wide Unsync flag set
+
+--------------------------------------------------------------------------------
+
 Version 2.0.3.0
 January 10, 2008
 
