--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-23  Aaron Bockover  <abock@gnome.org>
+
+	* Makefile.am: Install .pc file to datadir since we're noarch
+
 2009-01-22  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/TagLib/CombinedTag.cs:
