--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-19  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/TagLib/File.cs: Patch from Félix Velasco fixing a bug in our XML
+	documentation (BGO #572253)
+
+2009-02-19  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* configure.ac: Patch from Bertrand Lorentz using $(prefix)/lib in
 	GACUTIL_FLAGS instead of $(libdir) (BGO #572259)
 
