--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-19  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/TagLib/Tag.cs: Patch from Gregory S. Chudov fixing bug in the CopyTo
+	method that copied the Copyright into the Conductor tag (BGO #572382)
+
+2009-02-19  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/TagLib/File.cs: Patch from Félix Velasco fixing a bug in our XML
 	documentation (BGO #572253)
 
